fixing poorly implemented stash

--- a/AppOutput/Education/educosts_app.tex
+++ b/AppOutput/Education/educosts_app.tex
@@ -9,8 +9,8 @@ Vocational or Technical Training (Started)& 19 & 1 & \$7,245 & 8:3  (control:tre
 Vocational or Technical Training (Completed)& 19-20 & 2 &  \$7,245 &  4:9 (control:treatment)\\ \\
 Community College (Started) &   19 & 1 &  \$7,001 & 11:6 (control:treatment) \\ \\
 Community College (Completed) & 19-20 & 2 &  \$7,001 & 9:8 (control:treatment)\\ \\
- College (Started)   &  19 & 1 &  \$7,685& Assume dropouts drop out at the end of the first year. 5:8 (control:treatment).\\ \\
- College (Completed) &  19-22 & 4 & \$11,886 & 3:8 (control:treatment)\\ \\
+ Any College (Started)   &  19 & 1 &  \$7,685& Assume dropouts drop out at the end of the first year. 5:8 (control:treatment).\\ \\
+ Any College (Completed) &  19-22 & 4 & \$11,886 & 3:8 (control:treatment)\\ \\
 Graduate School (Started) & 23 & 1 &  \$9,704& Assume dropouts drop out at the end of the first year. 2 treated individuals.\\ \\
  Finished Masters &  23-25 & 2 &  \$9,704& 1 treated individual\\ \\
  Finished PhD & 23-26 & 4 & \$9,704 & 1 treated individual\\ \\
