--- a/Appendices/Health.tex
+++ b/Appendices/Health.tex
@@ -3,4 +3,4 @@
 \input{Appendices/Health/bgdesc.tex}
 \input{Appendices/Health/data.tex}
 \input{Appendices/Health/method_analysis.tex}
-\input{Appendices/Health/results.tex}
+%\input{Appendices/Health/results.tex}
