--- a/output/abc-care_dataavailability.tex
+++ b/output/abc-care_dataavailability.tex
@@ -216,7 +216,7 @@ Social Conduct	&	Law Breaking	&	Felony, Time spent incarcerated	&	15	&	- 	&	MARS
 \begin{sidewaystable}[H]							
 \begin{threeparttable}								
 \small										
-\caption{Adulthood Data (Part I)} \label{tab:adultvars_1}						\centering										
+\caption{Adult Data (Part I)} \label{tab:adultvars_1}						\centering										
 \scriptsize										
 \begin{tabular}{L{3.5cm} C{3.5cm} C{5cm} C{1.5cm} C{1.8cm} C{6cm}}										
 \toprule
@@ -267,7 +267,7 @@ Family Environment      	&	       Family Members  	&	       Number of adults in 
 \begin{sidewaystable}[H]
 \begin{threeparttable}
 \small
-\caption{Adulthood Data (Part II)} \label{tab:adultvars_2}
+\caption{Adult Data (Part II)} \label{tab:adultvars_2}
 \centering
 \scriptsize
 \begin{tabular}{L{3.5cm} C{3.5cm} C{5cm} C{1.5cm} C{1.8cm} C{6cm}}
